--- a/src/components/mainbox/NameBox.css
+++ b/src/components/mainbox/NameBox.css
@@ -25,6 +25,10 @@ h1.fullName {
 @media only screen and (max-width: 767px) {
   .NameText {
     width: 85%;
-    height: 45%;
+  }
+}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .NameText {
+    width: 65%;
   }
 }
