--- a/src/components/navbar/Navigation.css
+++ b/src/components/navbar/Navigation.css
@@ -1,20 +1,14 @@
 .NavBar {
   overflow: hidden;
   height: 8%;
-  width: 50%;
+  width: 40%;
   position: absolute;
-  color: white;
-  border-width: 0.15rem;
-  border-radius: 15px;
-  border-style: solid;
-  text-align: left;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   display: flex;
   flex-direction: row;
   transform: translate(-50%, -50%);
-  backdrop-filter: blur(5px);
-  top: 77%;
+  top: 75%;
   left: 50%;
 }
 .Intro,
@@ -25,26 +19,14 @@
   justify-content: center;
   text-align: center;
   /* top: 30%; */
-  border-right: 2px solid white;
   height: 102%;
   width: 25%;
-  text-decoration: none;
-  color: white;
-}
-.reLinks {
-  position: relative;
-  top: 10%;
 }
 
 button {
-  background-color: transparent;
-  /* background-repeat: none; */
-  color: white;
-  border: none;
   cursor: pointer;
   overflow: hidden;
   outline: none;
-  font-size: 12pt;
 }
 .LinkedIn {
   border-right: none;
@@ -52,13 +34,8 @@ button {
 
 @media only screen and (max-width: 767px) {
   .NavBar {
-    top: 80%;
+    top: 75%;
     width: 85%;
-  }
-  .reLinks {
-    top: 0;
-    display: flex;
-    justify-content: center;
   }
   .GitHub,
   .LinkedIn {
