--- a/src/components/mainbox/NameBox.css
+++ b/src/components/mainbox/NameBox.css
@@ -20,6 +20,7 @@
 h1.fullName {
   position: relative;
   font-size: 20pt;
+  margin: 10px;
 }
 @media only screen and (max-width: 767px) {
   .NameText {
